<resources>

    <string name="app_name">HawkBrowser</string>
    <string name="go">Go</string>
    <string name="goback">back</string>
    <string name="goforward">forward</string>
    <string name="newwindow">new</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="selectwindow">windows</string>
    <string name="addressbarhint">Please input url</string>
    <string name="webviewtitle">web page</string>
    <string name="close">close</string>
    <string name="clear">清空</string>
    <string name="homepageurl">http://www.baidu.com</string>
    <string name="defaultpagetitle">无标题</string>
    <string name="popmenu_bookmarkhistory">书签/历史</string>
    <string name="popmenu_addbookmark">添加书签</string>
    <string name="popmenu_refresh">刷新</string>
    <string name="popmenu_systemsetting">系统设置</string>
    <string name="popmenu_downloadmanager">下载管理</string>
    <string name="popmenu_skin">皮肤</string>
    <string name="popmenu_help">帮助反馈</string>
    <string name="popmenu_exit">退出</string>
    <string name="management">管理</string>
    <string name="sync">同步</string>
    <string name="back">返回</string>
    <string name="bookmark">书    签</string>
    <string name="history">历    史</string>
    <string name="bookmark_exist">书签已存在</string>
    <string name="history_today">今天(%d)</string>
    <string name="history_yestory">昨天(%d)</string>
    <string name="history_longago">更早(%d)</string>
    <string name="nosdcard">没有SD卡</string>
    <string name="diskspacenotengouth">空间不足</string>
    <string name="download_management">下载管理</string>
    <string name="file_management">文件管理</string>
    <string name="download_ondownload">正在下载(%d)</string>
    <string name="download_downloadfinished">下载完成(%d)</string>
    <string name="paused">暂停</string>
    <string name="back_to_parent">返回上一级</string>
    <string name="open_file_no_app">没找到应用程序打开此文件</string>
    <string name="finish">完成</string>
    <string name="redownload">重新下载</string>
    <string name="delete">删除</string>
    <string name="confirm_delet_file">确认删除此文件?</string>
    <string name="confirm_delete_task">确认删除此任务?</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="delete_file_same_time">同时删除下载文件</string>
    <string name="file_download">文件下载</string>
    <string name="file_size_kb">文件大小: %d KB</string>
    <string name="download">下载</string>
    <string name="setting">设置</string>
    <string name="font_size">字体大小</string>
    <string name="medium_default">中(默认)</string>
    <string name="turnpage_button">翻页按钮</string>
    <string name="none">无</string>
    <string name="rotate_screen">旋转屏幕</string>
    <string name="vertical_screen">竖屏</string>
    <string name="accelerate">省流加速</string>
    <string name="privatemode">无痕浏览</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="mostvisit">最常访问</string>
    <string name="clearrecord">清除记录</string>
    <string name="about">关于</string>

</resources>