<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:layout_weight="0"
	    android:orientation="horizontal" >
	    
	    <EditText
	        android:id="@+id/mainframe_addressbar"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	       	android:layout_weight="1"
	        android:hint="@string/addressbarhint" >
	
	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/mainframe_gobtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/go" />
	 </LinearLayout>

    <com.example.hawkbrowser.core.HawkWebView
        android:id="@+id/mainframe_webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    
   	<Spinner
   	    android:id="@+id/spinner1"
   	    android:layout_width="match_parent"
   	    android:layout_height="1dp"
   	    android:background="@drawable/zxingscan" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainframe_navigationbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/toolbar_bg"
        android:orientation="horizontal" >
	    
	    <ImageButton
	        android:id="@+id/navigationbar_back"
	        style="?android:attr/textAppearanceMedium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/toolbar_bg"
	        android:contentDescription="@string/goback"
	        android:enabled="false"
	        android:src="@drawable/toobar_back_button" />
	
	    <ImageButton
	        android:id="@+id/navigationbar_forward"
	        style="?android:attr/textAppearanceMedium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:enabled="false"
	        android:background="@drawable/toolbar_bg"
	        android:src="@drawable/toolbar_forward_button"
	        android:contentDescription="@string/goforward" />
	
	    <ImageButton
	        android:id="@+id/navigationbar_menu"
	        style="?android:attr/textAppearanceMedium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:contentDescription="@string/menu"
	        android:background="@drawable/toolbar_bg"
	        android:src="@drawable/toolbar_menu_normal" />
	
	    <ImageButton
	        android:id="@+id/navigationbar_home"
	        style="?android:attr/textAppearanceMedium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/toolbar_bg"
	        android:src="@drawable/toolbar_home_normal"
	        android:contentDescription="@string/home" />
	
	    <ImageButton
	        android:id="@+id/navigationbar_selectwindow"
	        style="?android:attr/textAppearanceMedium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/toolbar_bg"
	        android:src="@drawable/toolbar_multi_normal"
	        android:contentDescription="@string/selectwindow" />

   </LinearLayout>

</LinearLayout>